tests/paczka1/fuzzy1/99817103.err
Error in line 4: A340 S484 12,8
Error in line 6: NJMf A340 75,6
Error in line 15: MjpJXAp0Gs A825 31,8
Error in line 7: NJMf A489 0,6
Error in line 12: cFXhhxZgrqU A825 47,2
